--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@bigbinary/neetoui": "^1.0.27",
+    "@bigbinary/neeto-icons": "^1.7.5",
+    "@bigbinary/neetoui": "^2.0.82",
     "@rails/webpacker": "5.4.3",
     "axios": "^0.23.0",
     "babel-plugin-js-logger": "^1.0.17",
